🏍⏳ Checkpoint ./views/createStreamPage.ejs:37906304/7890 ./server.js:37906304/3544 ./views/liveIndex.ejs:37906304/34492 ./views/errorPage.ejs:37906304/150 ./views/liveRoom.ejs:37906304/154 ./views/streamer.ejs:37906304/154

--- a/views/errorPage.ejs
+++ b/views/errorPage.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lỗi | Nền Tảng Học Tập</title>
+  <link rel="icon" type="image/png" href="https://cdn.glitch.global/71030012-56ea-4d26-a426-e0099201df1c/823029_library_512x512.png?v=1741523759119">
     <link rel="stylesheet" href="/styles.css"> <%# Global styles %>
     <style>
         body {
