--- a/views/streamer.ejs
+++ b/views/streamer.ejs
@@ -7,6 +7,7 @@
     <title>Streamer: <%= roomTitle %></title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="/css/streamer.css">
+      <link rel="icon" type="image/png" href="https://cdn.glitch.global/71030012-56ea-4d26-a426-e0099201df1c/823029_library_512x512.png?v=1741523759119">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
