🌑🏹 Checkpoint ./views/liveRoom.ejs:37906304/985 ./server.js:37906304/13623 ./public/js/liveRoom.js:37906304/2429

--- a/views/liveRoom.ejs
+++ b/views/liveRoom.ejs
@@ -265,13 +265,12 @@
             roomId: "<%= roomId %>",
             username: "<%= username %>",
             roomOwnerUsername: "<%= roomOwner %>", // Make sure this is passed from server
-            isHost: <%= isHost %>,
             peerConfig: JSON.parse('<%- JSON.stringify(peerConfig) %>'),
             glitchProjectUrl: "<%= glitchProjectUrl %>",
-            userIsPro: <%= user ? user.isPro : false %>,
-            // Whiteboard specific initial states for the current user
-            initialWhiteboardGloballyVisible: <%= initialWhiteboardGlobalState %>, // Server should provide this
-            initialViewerCanDraw: <%= initialViewerDrawPermission %>, // Server should provide this
+            userIsPro: <%= userIsPro %>,
+            initialWhiteboardGloballyVisible: <%= initialWhiteboardGlobalState %>,
+            initialViewerCanDraw: <%= initialViewerDrawPermission %>,
+            isHost: <%= isHost %>,
         };
     </script>
     <script src="/js/alerts.js"></script>
