🍤🚲 Checkpoint ./server.js:37906304/86801 ./public/js/streamer.js:37906304/3617 ./public/js/liveRoom.js:37906304/599 ./views/streamer.ejs:37906304/278

--- a/views/streamer.ejs
+++ b/views/streamer.ejs
@@ -103,6 +103,10 @@
                         </button>
                     </div>
                      <div class="control-section">
+                        <button id="shareLiveBtn" class="control-btn" data-tooltip="Chia sẻ link buổi Live này">
+                            <i class="fas fa-share-alt"></i>
+                            <span class="btn-label">Share Live</span>
+                        </button>
                         <button id="endStreamBtnV2" class="control-btn end-stream" data-tooltip="Kết thúc buổi Live">
                             <i class="fas fa-power-off"></i>
                             <span class="btn-label">Kết Thúc</span>
